--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,18 @@ header#header h1#main-header-text {
     text-transform: uppercase;
     color: #fff;   
 }
+section#about{
+    margin: 30px 10px;
+    padding: 0 50px;
+}
+
+section#about h2#about-header{
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+section#about p.about-content{
+    text-align: center
+}
+
+
